LPS-42903 - add method to detect if mail include attachement

--- a/portlets/mail-portlet/docroot/WEB-INF/src/portlet.properties
+++ b/portlets/mail-portlet/docroot/WEB-INF/src/portlet.properties
@@ -42,3 +42,9 @@ default.accounts=\
 }
 
 messages.sync.count=1000
+
+#
+# Set this property as accurate to detect the mail attachments accurately.
+# By default, we use fast for fuzzy detecting in purpose of better performance.
+#
+message.attachment.detector=fast
